2006-04-18  Christian Stimming  <stimming@tuhh.de>

	* po/fr.po: Updated French translation by Jonathan Ernst.

	* po/glossary/fr.po: Added French glossary by Jonathan Ernst
	<jonathan@ernstfamily.ch>.

2006-04-18  Derek Atkins  <derek@ihtfp.com>

	* doc/tip_of_the_day.list.in:
	  Fix a 1.8 -> 2.0 string.
	* src/report/standard-reports/register.scm:
	  Fix a string that wasn't marked for translation.

2006-04-17  Neil Williams <linux@codehelp.co.uk>

	* configure.in : Bump versions of QOF libraries.

	* lib/libqof/backend/file/qsf-xml-map.c : Refactoring common 
	code and fixing QOF_VERSION check.

	* lib/libqof/backend/file/pilot-qsf-gncCustomer.xml :
	remove gncBillTerm - isn't possible to create from 
	pilot data.
	* lib/libqof/backend/file/qsf-backend.c :
	* lib/libqof/backend/file/qsf-xml-map.c :
	* lib/libqof/backend/file/qsf-xml.c :
	* lib/libqof/backend/file/qsf-xml.h : Add control over status of 
	various objects during mapping.
	
	* lib/libqof/qof/test/Makefile.am : Remove unwanted include.
	* lib/libqof/qof/deprecated.h : Retain glib.h in QOF, not
	deprecated.

2006-04-16  Chris Lyttle  <chris@wilddev.net>

	* NEWS: Added some text about the release.
	* configure.in: Change to version 1.9.5

2006-04-16  Derek Atkins  <derek@ihtfp.com>

	* src/business/business-gnome/glade/choose-owner.glade:
	* src/business/business-gnome/dialog-choose-owner.[ch]:
	  Add new files to make the string freeze that define the
	  interface to choose a customer or vendor for a hand-entered
	  transaction.  Hopefully we can simplify the input by allowing
	  users to enter a transaction directly and assigning it to a
	  customer/vendor by hand (rather than going through the business
	  interfaces).

2006-04-15  Derek Atkins  <derek@ihtfp.com>

	* src/gnome-utils/druid-gnc-xml-import.c:
	  need to #include gmodule.h.

2006-04-15  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-tree-view-price.c:
	* src/gnome-utils/dialog-account.c: